add missing libraries for navigation & vector icons

--- a/ios/NewsFeed/Info.plist
+++ b/ios/NewsFeed/Info.plist
@@ -51,5 +51,32 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Cuciniere-Regular.otf</string>
+		<string>Changa-Bold.ttf</string>
+		<string>Changa-ExtraBold.ttf</string>
+		<string>Changa-ExtraLight.ttf</string>
+		<string>Changa-Light.ttf</string>
+		<string>Changa-Medium.ttf</string>
+		<string>Changa-Regular.ttf</string>
+		<string>Changa-SemiBold.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 </dict>
 </plist>
