--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "i18n-js": "^3.9.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-modal": "^13.0.1",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.1",
     "zustand": "^4.0.0-rc.1",
     "zustand-persist": "^0.4.0"
