--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
     "i18n-js": "^3.9.2",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.5.0",
