--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-query": "^3.39.1",
-    "zustand": "^4.0.0-rc.1",
+    "zustand": "^3.7.2",
     "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
